second try to fix home on mobile

--- a/viteApp/src/css/Home.css
+++ b/viteApp/src/css/Home.css
@@ -19,7 +19,7 @@
     gap: 10px 0px; 
     border: 1px solid #C0C3D9;
     padding: 10px;
-    width: 500px;
+    width: 31.25rem;
 }
 
 /* Positioning the elements in the grid */
@@ -87,8 +87,8 @@
     max-width:7.5rem;
 }
 
-@media (max-width : 600){
+@media (max-width : 600px){
     .ShareBox{
-        width: 250px;
+        width: 15.625rem;;
     } 
 } 
